style: fix alignments

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -3,7 +3,6 @@
     grid-template-columns: 1fr;
     column-gap: 1.25rem;
     row-gap: 1.75rem;
-    margin-top: 0.875rem;
 }
 
 @media only screen and (min-width: calc(640px + 40px)) {
